# python_tca2

./: README.md  bug3.md  py-tca2.sh  pyproject.toml
bug1/: 9_id_446575.html_nob.html  9_id_446575.html_nob.sent  9_id_446575.html_nob.tmx  9_id_446575.html_nob_new.txt  9_id_461249.html_sme.sent  9_id_461249.html_sme_new.txt
bug2/: 19_id_326047.html_nob.html  19_id_326047.html_nob.sent  19_id_326047.html_nob.tmx  19_id_326047.html_nob_new.txt  19_id_458644.html_sme.sent  19_id_458644.html_sme_new.txt
bug3/: giella_no.docx_nob.html  giella_no.docx_nob.sent  giella_no.docx_nob.tmx  giella_no.docx_nob_new.txt  giella_sam.docx_sme.sent  giella_sam.docx_sme_new.txt  samediggi-article-42.html_nob.html  samediggi-article-42.html_nob.sent  samediggi-article-42.html_nob.tmx  samediggi-article-42.html_nob_new.txt  samediggi-article-42.html_sme.sent  samediggi-article-42.html_sme_new.txt
data/: anchor-nob-fkv.txt  fkv.orig.tca2  fkv.sent  kommisjonen_21.08.2020_nob.txt_nob_new.txt.orig.txt  nob.sent
python_tca2/: aelement.py  aligned.py  aligned_sentence_elements.py  alignment.py  alignment_suggestion.py  alignment_utils.py  alignmentmodel.py  alignments_etc.py  anchorwordhit.py  anchorwordhitcomparator.py  anchorwordhits.py  anchorwordlist.py  anchorwordlistentry.py  anchorwordmatch.py  bestpathscore.py  cluster.py  clusters.py  compare.py  comparecells.py  comparematrix.py  constants.py  elementinfo.py  elementinfotobecompared.py  elementsinfo.py  exceptions.py  link.py  match.py  matchinfo.py  paralleldocuments.py  path.py  path_candidate.py  path_candidates.py  pathstep.py  py.typed  queue_entries.py  queue_entry.py  queuelist.py  ref.py  ref_comparator.py  similarity_utils.py  (+6 more)
suggest1/: 9_id_446575.html_nob.html  9_id_446575.html_nob.sent  9_id_446575.html_nob.tmx  9_id_461249.html_sme.sent
tests/: test_alignment_suggestion.py  test_alignmentmodel.py  test_elementinfotobecompared.py  test_path_candidate.py  test_queuelist.py  test_similarity_utils.py  test_steplist.py
